[package]
name = "ICEdit"
version = "0.2.0"
authors = ["kyleheadley <kyle.headley@colorado.edu>"]

[[bin]]
name = "icedit"

[dependencies]
time = "0.1"
rand = "0.3"
clap = "2.1.2"

[dependencies.adapton]
git = "https://github.com/cuplv/adapton.rust.git"
#path = "/Users/hammer/adapton"
#path = "../adapton.rust"
