[package]
name = "ICEdit"
version = "0.3.0"
authors = ["kyleheadley <kyle.headley@colorado.edu>"]

[[bin]]
name = "icedit"

[dependencies]
time = "0.1"
rand = "0.3"
clap = "2.1.2"
piston = "0.15.1"
piston2d-graphics = "0.11.0"
piston2d-opengl_graphics = "0.19.0"
pistoncore-glutin_window = "0.17.1"

[dependencies.adapton]
git = "https://github.com/cuplv/adapton.rust.git"
#path = "/Users/hammer/adapton"
#path = "../adapton.rust"
